<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:background="@android:color/white">
	<LinearLayout
	    android:orientation="vertical"
	    android:padding="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<ImageView
			android:id="@+id/logo"
			android:layout_width="172dp"
			android:layout_height="128dp"
			android:layout_marginTop="22dp"
			android:layout_marginBottom="22dp"
			android:adjustViewBounds="true"
			android:layout_gravity="center_horizontal"
			android:src="@drawable/logo" />
		<LinearLayout
			android:id="@+id/setup"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
            <TextView
                android:text="@string/connect_to_openvbx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#555" />
            <EditText
                android:id="@+id/endpoint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/https_prefix"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:singleLine="true"
                android:inputType="textUri" />
            <TextView
                android:text="@string/openvbx_url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#777" />
            <Button
                android:id="@+id/next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/next"
                android:theme="@style/OpenVBX.Button" />
		</LinearLayout>
        <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:theme="@style/OpenVBX.Button" />
            </LinearLayout>
	</LinearLayout>
</ScrollView>