<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/fragment_toolbar" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:id="@+id/phone"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/callerid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/from" />
            <EditText
                android:id="@+id/to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to"
                android:singleLine="true"
                android:inputType="phone"
                android:layout_marginTop="10dp" />
            <Button
                android:id="@+id/call"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:layout_marginTop="10dp"
                android:theme="@style/OpenVBX.Button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>